<resources>
    <string name="app_name">Breaking Bad Info</string>

    <!--Home buttons-->
    <string name="title_txt">What would you like to know about?</string>
    <string name="characters_txt">Characters</string>
    <string name="episodes_txt">Episodes</string>
    <string name="quotes_txt">Quotes</string>
    <string name="deaths_txt">Deaths</string>

    <!--character details-->
    <string name="img_description">Character image</string>
    <string name="birthday">Birthday: %s </string>
    <string name="occupation">Occupation: %s</string>
    <string name="status">Status: %s </string>
    <string name="nickname">Nickname: %s </string>
    <string name="appearance">Season appearance: %s</string>
    <string name="portrayed">Portrayed by: %s </string>


</resources>