<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.HomeFragment">

    <data>

        <variable
            name="homeFragment"
            type="com.example.breakingbadinfo.ui.HomeFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/question_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/title_txt"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/character_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:onClick="@{() -> homeFragment.goToCharacterScreen()}"
            android:text="@string/characters_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_textview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/episodes_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/episodes_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quotes_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/quotes_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/episodes_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deaths_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/deaths_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quotes_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>